--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        
+        <title>Maria's Website</title>
         <link href="https://fonts.googleapis.com/css?family=Dawning+of+a+New+Day|Raleway:400,600,600i,700i|Yellowtail" rel="stylesheet">
     <style>
         
